# rag_over_images

./: .gitignore  Plan.md  README.md  pyproject.toml  requirements.txt
.venv32/: pyvenv.cfg
ingestion/: ingest.py
rag_over_images/: LLM.py  __init__.py  app.py  utils.py
rag_over_images/ingestion/: __init__.py  ingest.py
rag_over_images/query/: query.py
tests/: conftest.py  test_ingest.py  test_llm.py  test_query.py  test_utils.py
